# phonet

./: .gitignore  Cargo.toml  README.md  TODO.md  api.txt  phonet
.github/workflows/: test.yml
examples/: esperanto.phonet  example.phonet  tokipona.phonet
src/: args.rs  color.rs  error.rs  lib.rs  main.rs  outcome.rs
src/draft/: mod.rs  parse.rs  substitute.rs  types.rs
src/draft/minify/: mod.rs  tests.rs
src/draft/parse/: mod.rs  tests.rs
src/draft/parse/statements/: tests.rs
src/draft/replace/: mod.rs  tests.rs
src/draft/statements/: mod.rs  tests.rs
src/draft/substitute/: mod.rs  tests.rs
src/generate/: mod.rs  tests.rs
src/outcome/: colorize.rs  display.rs  mod.rs
src/outcome/display/: mod.rs  tests.rs
src/outcome/run/: mod.rs  tests.rs
tests/: integration.rs  parse.rs  run.rs  tokipona.rs
