[package]
name = "phonet"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2.2"
fancy-regex = "0.11.0"
fancy-regex-macro = "0.1.0"
thiserror = "1.0.38"
clap = { version = "4.1.6", features = ["derive"] }
