[package]
name = "phonet"
version = "0.9.2"
edition = "2021"
description = "A CLI tool and library to validate phonotactic patterns for constructed languages"
license = "MIT"
documentation = "https://docs.rs/phonet/latest/phonet"
repository = "https://github.com/darccyy/phonet"
authors = ["darcy"]
keywords = ["phoner", "phone", "regex", "lang", "conlang"]
exclude = ["target", "examples/test.min.phonet"]

[dependencies]
colorful = "0.2.2"
fancy-regex = "0.11.0"
fancy-regex-macro = "0.1.0"
thiserror = "1.0.38"
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
