[package]
name = "phonet"
version = "1.0.2"
edition = "2021"
description = "A CLI tool and library to validate phonotactic patterns for constructed languages"
license = "MIT"
documentation = "https://docs.rs/phonet/latest/phonet"
repository = "https://github.com/darccyy/phonet"
authors = ["darcy"]
keywords = ["phoner", "phone", "regex", "lang", "conlang"]
exclude = ["target"]

[dependencies]
fancy-regex = "0.11.0"
fancy-regex-macro = "0.1.0"
thiserror = "1.0.38"
rand = "0.8.5"
stilo = "0.3.1"
clap = { version = "4.1.6", features = ["derive"] }

[[bin]]
name = "phonet"
